added spacing to bottom of video player

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -257,6 +257,9 @@
         padding: $common-spacing * 2
         width: 70%
 
+    .video-player
+      margin-bottom: $common-spacing
+
 
   &__multi-text-block-container
     $ttbc: &
