search maps zoom buttons depress when clicked

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -274,6 +274,10 @@
       height: $size
       width: $size
 
+    &:active
+      position: relative
+      top: .1rem
+
     &:before
       display: block
       color: $color-dark
