--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -74,7 +74,7 @@
   font-size: $font-size-small
   //margin: 0 $common-spacing 0
   margin: 0 auto
-  max-width: 48rem
+  max-width: 85%
   padding-left: $common-spacing
   padding-right: $common-spacing
 
