--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -39,21 +39,25 @@
   margin: $common-spacing
 
   @include bp('portrait')
-    display: flex
-    flex-direction: column
     height: 100%
-    margin: $common-spacing * 2
-    margin-bottom: 0
-    margin-top: 0
-    padding-bottom: $common-spacing * 2
-    padding-top: $common-spacing * 2
+    margin: 0
+    position: relative
     text-align: center
+
+  &__header
+
+    @include bp('portrait')
+      padding: $common-spacing
+      width: 38%
 
   &__title
     @extend .common-header
     @include bp('portrait')
-      align-self: center
       margin-bottom: $common-spacing
+
+      &:before
+        margin-left: auto
+        margin-right: auto
 
   &__prompt
     @include bp('portrait')
@@ -64,12 +68,9 @@
     position: relative
 
     @include bp('portrait')
-      align-self: center
-      width: 40rem
 
   &__geolocation
     $gl: &
-    display: flex
     font-size: $font-size-small
     font-weight: $font-weight-bold
     margin: $common-spacing 0
@@ -77,10 +78,8 @@
     transition: $main-transition-duration
 
     &-button
-      display: flex
 
     @include bp('portrait')
-      justify-content: center
 
     &-icon
       $size: 2rem
@@ -113,8 +112,6 @@
       font-size: $font-size-small
 
     @include bp('large')
-      //height: 5.2rem
-      //padding-left: 2rem
 
     &:focus
       border-color: $color-main
@@ -174,15 +171,21 @@
       right: 4rem
       top: 0
 
-  &__jobs-available
-    font-weight: $font-weight-bold
+  &__jobs-available-container
     margin: $common-spacing/2 0
 
     @include bp('portrait')
       margin: 0
+      padding: 0 $common-spacing
       position: relative
-      text-align: left
-      top: -3.6rem
+      width: 38%
+
+  &__jobs-available
+    border-bottom: $border
+    border-top: $border
+    font-weight: $font-weight-bold
+    padding: $common-spacing
+    text-align: left
 
   &__results
     $sr: &
@@ -240,10 +243,13 @@
     position: relative
 
     @include bp('portrait')
-      flex-basis: 62%
+      bottom: 0
+      position: absolute
+      right: 0
+      top: 0
+      width: 62%
 
     @include bp('landscape')
-      flex-basis: 66%
 
   &__map-zoom-button-container
     position: absolute
@@ -259,7 +265,7 @@
     $size: 3rem
     align-items: center
     background-color: $color-white
-    border: .4rem solid $color-light
+    border: 0 solid $color-light
     box-shadow: $map-shadow
     border-radius: $size
     cursor: pointer
@@ -297,23 +303,24 @@
 
   &__view-list-container
     @include bp('portrait')
-      flex-basis: 38%
-      margin-right: $common-spacing
-      position: relative
+      bottom: 0
+      left: 0
+      position: absolute
+      top: 25rem
+      width: 38%
 
     @include bp('landscape')
-      flex-basis: 33%
 
   &__view-list
     @include bp('portrait')
-      overflow-y: auto
       height: 100%
+      overflow-y: auto
+      padding: 0 $common-spacing
 
     &-element
       background-color: $color-white
       border-top: $border
       cursor: pointer
-
 
       // FADING:
       // https://codepen.io/anon/pen/opBRLp
@@ -558,5 +565,3 @@
           &--enabled
             border-color: $color-dark
             color: $color-dark
-
-
