--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -40,6 +40,7 @@ $color-very-light: rgb(229,229,232)
 $color-light: rgb(204,204,204)
 $color-medium: rgb(240,240,240)
 $color-grey-medium: rgb(102,102,119)
+$color-quite-dark: rgb(51,51,74)
 $color-dark: rgb(25,25,52) //rgb(0,1,29) //#191934
 $color-very-dark: rgb(0,0,30)
 $color-dark-section: rgb(51,51,75) //rgb(50,52,74)
