fixed issue with pins not being clickable on the map
setting pointer-events to auto on the icon div
and adding an event for touchstart was needed to get this to work

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -383,7 +383,6 @@
   &__map-marker
     $c: &
     $size: $common-spacing * 2
-
     cursor: pointer
     pointer-events: none
     position: absolute
@@ -396,9 +395,10 @@
     &-icon
       background: url('/app/themes/ppj/dest/img/inactive_pin.png')
       background-size: 3.2rem 3.8rem
+      cursor: pointer
       left: - 1.55rem
       height: 3.8rem
-      pointer-events: initial
+      pointer-events: auto
       position: relative
       top: - 3.5rem
       width: 3.2rem
