styled the job summary salary such that large prison names don't obscure it

--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -1,5 +1,6 @@
 .job-summary
   $verticalPadding: $common-spacing / 2
+  background-color: inherit
   font-size: $font-size-small
   line-height: 1.2
   position: relative
@@ -16,6 +17,7 @@
     bottom: $verticalPadding
 
   &__content
+    background-color: inherit
     padding: $verticalPadding $common-spacing
     position: relative
 
@@ -29,7 +31,9 @@
     font-weight: $font-weight-bold
 
   &__salary
+    background-color: inherit
     font-weight: $font-weight-bold
+    padding-left: $common-spacing
     position: absolute
     right: $common-spacing
     top: $verticalPadding
