explicitly setting color of search map marker label text
so that the text is visible on firefox

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -408,6 +408,7 @@
       border: 1px solid $color-light
       border-radius: .25em
       box-shadow: $map-shadow
+      color: $color-dark
       font-size: 1.6rem
       font-weight: $font-weight-bold
       line-height: 1
