ensuring that blue bar is still visible on selected job on search page
also added transition effect

--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -15,6 +15,7 @@
     position: absolute
     top: $verticalPadding
     bottom: $verticalPadding
+    z-index: 1
 
   &__content
     background-color: inherit
@@ -56,4 +57,5 @@
 
     &:before
       background-color: $color-secondary
+      transition: all $main-transition-duration
 
