changing open nav menu display to block from initial because ie11 doesn't do initial.

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -353,7 +353,7 @@
   &--nav-menu-open
     .header
       &__nav-menu
-        display: initial
+        display: block
         position: fixed
         top: 0
         bottom: 0
