specifying heights and min-heights to allow flex to work properly on ie11

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -67,6 +67,14 @@ strong
 div, p
   font-weight: $font-weight-light
 
+body,
+#site-container,
+.page-container
+  height: 100%
+
+html
+  min-height: 100%
+
 *
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
   -moz-tap-highlight-color: rgba(0, 0, 0, 0)
