setting max-width of mult text block container to 100%
this is to avoid the ie11 issue of contents not wrapping within the container
https://github.com/philipwalton/flexbugs#flexbug-2

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -347,6 +347,7 @@
       @include bp('portrait')
         font-size: $font-size-medium
         margin-left: 0
+        max-width: 100%
         text-align: center
 
         .text-block__multi-text-block-container--double &
