--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -2,8 +2,11 @@
   @include bp('portrait')
 
     .page-blocks
+      height: 0
       display: flex
-      flex: 1
+      flex-basis: auto
+      flex-grow: 1
+      flex-shrink: 1
 
     .facebook-footer
       display: none
@@ -35,6 +38,8 @@
   $s: &
   $border: .1rem solid $color-light
   $map-shadow: 0px 4px 16px 0px $color-medium-transparent
+
+  background: $color-white
   margin: $common-spacing
 
   @include bp('portrait')
