added hack to remove text block border separator for new accordion section on rewards and benefits page

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -30,7 +30,9 @@
     @include bp('landscape')
       padding: $common-spacing * 3 0
 
-  .page-id-306 .page-blocks .l-full:first-child & // TODO implement proper fix
+  // TODO implement proper fixes
+  .page-id-306 .page-blocks .l-full:first-child &,
+  #pay .text-block-container
     border-bottom: none
 
   .l-full &--highlighted
