increased bottom margin for text block titles on landscape and above

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -108,6 +108,7 @@
     @include bp('landscape')
       font-size: 3.8rem
       line-height: 4.6rem
+      margin-bottom: 2.4rem
 
     @include bp('large')
       font-size: 4.4rem
