increased bottom margin for text block tables

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -228,7 +228,7 @@
       width: 100%
 
       @include bp('portrait')
-        margin: $common-spacing auto
+        margin: 0 auto $common-spacing * 2
         width: 80%
 
     table.three-columns
