added hack to remove text block border separator for new accordion section on rewards and benefits page

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -32,8 +32,8 @@
 
   // TODO implement proper fixes
   .page-id-306 .page-blocks .l-full:first-child &,
-  #pay .text-block-container
-    border-bottom: none
+  #pay &
+    border-bottom-width: 0
 
   .l-full &--highlighted
     background-color: $color-section-highlighted
