--- a/web/app/themes/ppj/src/sass/components/quote.sass
+++ b/web/app/themes/ppj/src/sass/components/quote.sass
@@ -43,10 +43,14 @@
     border-width: 0
 
   @include bp('portrait')
-    padding: $common-spacing * 2
+    padding: $common-spacing
+
+  @include bp('landscape')
+    padding: $common-spacing * 1.5
 
   @include bp('large')
     font-size: $font-size-almost-huge
+    padding: $common-spacing * 2
 
   &__content
     font-size: 2rem
