changed the widths of quote marks in quote sections

--- a/web/app/themes/ppj/src/sass/components/quote.sass
+++ b/web/app/themes/ppj/src/sass/components/quote.sass
@@ -70,7 +70,17 @@
       line-height: 4.8rem
 
   &__mark
-    width: 2em
+    width: 3.8rem
+
+    @include bp('portrait')
+      width: 3.8rem
+
+    @include bp('landscape')
+      width: 5.2rem
+
+    @include bp('large')
+      width: 7.2rem
+
 
     path
       fill: currentColor
