styled search page footer so that it compresses properly

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -29,9 +29,11 @@
 
       &__nav-link > *, &__copyright > *
         border-left: 1px solid $color-light
-        display: inline-block
+        display: block
+        height: 100%
         line-height: 1
         padding-left: $common-spacing
+        text-align: center
 
       &__nav-link:first-child > *
         border-left: none
