--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -66,8 +66,13 @@
 
   &__image
     height: 100%
+    opacity: 0
     position: relative
+    transition: $main-transition-duration
     width: 100%
+
+    &--loaded
+      opacity: 1
 
   &__img-ratio
     height: 0
