--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -13,11 +13,8 @@
 button
   background: none
 
-body
+body, html
   background-color: $color-body
-
-html
-  background-color: black
 
 .page-container
   background-color: $color-white
