--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -550,9 +550,17 @@
       width: 4rem
 
     &-direction
+      align-items: center
       border-color: $color-light
       color: $color-light
       cursor: initial
+      display: flex
+      justify-content: center
+      padding: 0
+
+      & > svg
+        fill: currentColor
+        width: 100%
 
       &:first-child
         order: initial
