padding aspect ratio method doesn't work on Firefox with position flex
implemented fix from:
https://stackoverflow.com/questions/35825787/169-padding-bottom-trick-not-working-as-expected-in-firefox

--- a/web/app/themes/ppj/src/sass/components/video-player.sass
+++ b/web/app/themes/ppj/src/sass/components/video-player.sass
@@ -56,8 +56,14 @@
       fill: $color-secondary
 
   &--wistia
-    padding-bottom: 55.7%
+    padding-bottom: 0
     position: relative
+
+    // https://stackoverflow.com/questions/35825787/169-padding-bottom-trick-not-working-as-expected-in-firefox
+    &:before
+      display: block
+      content: ''
+      padding-bottom: 55.7%
 
     & > *
       bottom: 0
