enabled separate color themes for each leg
The particular leg that the user is visiting determines which css file is loaded.
There is one css file for each leg including the landing page.
The leg name is now a body class.
The leg name corresponds to the name of the nav menu that is displayed.
Currently each leg theme just defines the main color and the tertiary color,
and imports all of main.sass.
Color main shadow is now derived by darkening color-main by 5%.
The background color of the highlighted text blocks is
determined by color-tertiary with a 0.1 opacity
(sass functions like lighten didn't work as lightening a color
beyond a certain percentage just makes it white)

--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -29,11 +29,9 @@ $font-size-enormous: 4.8rem
 $font-size-gigantic: 5.6rem
 
 // colors
-$color-main: #0099cc
-$color-main-shadow: #0089bc
+$color-main-shadow: darken($color-main, 5%)
 $color-main-hover: #007197
 $color-secondary: rgb(30,147,189)
-$color-tertiary: rgb(113,11,105)
 $color-section-highlighted: rgb(240,229,239)
 $color-extremely-light: rgb(240,240,240)
 $color-very-light: rgb(229,229,232)
