--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -35,7 +35,7 @@
     border-bottom-width: 0
 
   .l-full &--highlighted
-    background-color: $color-section-highlighted
+    background-color: rgba($color-tertiary, 0.1)
     position: relative
     top: - $border-width
 
