made header background dark
so that the header doesn't flash white before the image fades in

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -12,6 +12,7 @@
     transition: $main-transition-duration
 
 .header
+  background-color: $color-quite-dark
   border-bottom: .4rem solid $color-very-light
   box-sizing: content-box
   z-index: 3
