background color of nav block now derived from color-main

--- a/web/app/themes/ppj/src/sass/components/nav-block.sass
+++ b/web/app/themes/ppj/src/sass/components/nav-block.sass
@@ -1,5 +1,5 @@
 .nav-block
-  background-color: $color-nav-block
+  background-color: rgba($color-main, 0.1)
   font-size: $font-size-small
   margin: $common-spacing $common-spacing
   padding: $common-spacing
