changed play button hover style for video overlay

--- a/web/app/themes/ppj/src/sass/components/video-player.sass
+++ b/web/app/themes/ppj/src/sass/components/video-player.sass
@@ -51,8 +51,7 @@
     width: 20%
 
     &:hover
-      opacity: .85
-      fill: $color-secondary
+      width: 22%
 
   &--wistia
     padding-bottom: 0
