--- a/web/app/themes/ppj/src/sass/error-page.sass
+++ b/web/app/themes/ppj/src/sass/error-page.sass
@@ -2,5 +2,32 @@
  * This stylesheet is intended for use on error pages
  */
 
+@import 'variables'
+@import 'breakpoints'
+
+html
+  font-size: 62.5% // 1 rem now equals 10px
+
 body
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
+  font-family: $sans-serif
+  font-size: $font-size-medium
+  text-size-adjust: none
+  background-color: $color-body
+  @include background-img('bg_404.png')
+  color: $color-white
+  display: flex
+  align-items: center
+  justify-content: center
+
+article
+  max-width: 84rem
+  margin: $common-spacing * 1.5
+  padding: ($common-spacing * 3) ($common-spacing * 2)
+
+  @include bp('portrait')
+    border: .5em solid $color-white
+    border-radius: 5rem
+    border-top-left-radius: 0
+
+h1, p
+  margin: 0 0 .65em 0
