--- a/web/app/themes/ppj/src/sass/error-page.sass
+++ b/web/app/themes/ppj/src/sass/error-page.sass
@@ -8,9 +8,12 @@
 html
   font-size: 62.5% // 1 rem now equals 10px
 
+html, body
+  height: 100%
+
 body
   font-family: $sans-serif
-  font-size: $font-size-medium
+  font-size: $font-size-large-medium
   text-size-adjust: none
   background-color: $color-body
   @include background-img('bg_404.png')
@@ -18,6 +21,9 @@ body
   display: flex
   align-items: center
   justify-content: center
+
+a
+  color: $color-white
 
 article
   max-width: 84rem
