fixed accordion list element spacing

--- a/web/app/themes/ppj/src/sass/components/accordion.sass
+++ b/web/app/themes/ppj/src/sass/components/accordion.sass
@@ -56,6 +56,7 @@
     &-subtitle
       font-family: $sans-serif
       font-weight: $font-weight-normal
+      margin-left: .5em
 
     &-content
       border-left: .4rem solid $color-light
