--- a/web/app/themes/ppj/src/sass/components/video-player.sass
+++ b/web/app/themes/ppj/src/sass/components/video-player.sass
@@ -1,4 +1,5 @@
 .video-player
+  $vp: &
   position: relative
   width: 100%
 
@@ -21,7 +22,7 @@
     @include bp('large')
       padding-bottom: 49.5rem
 
-    & > iframe
+    & > *
       bottom: 0
       height: 100%
       left: 0
@@ -29,6 +30,9 @@
       position: absolute
       top: 0
       width: 100%
+
+  &__cover
+    z-index: 1
 
   &__cover-image
     height: 100%
@@ -53,6 +57,10 @@
     &:hover
       width: 22%
 
+  &--playing
+    #{$vp}__cover
+      z-index: -1
+
   &--wistia
     padding-bottom: 0
     position: relative
@@ -75,3 +83,4 @@
       &__video-container
         height: 100%
 
+  &--playing
