Implemented Landing page
Landing page is a text block layout;
Landing page block consists of 'Groups' which are further divided into 'Cards'
One card per role;
Cards may or may not include an image;
Each card group has a configurable style, which currently only determines the CTA color;

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -162,6 +162,9 @@
     pointer-events: auto
     text-align: center
 
+    .landing-page &
+      background-color: $color-transparent
+
     @include bp('portrait')
       width: 11.3rem
 
