--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -65,6 +65,38 @@
         max-width: 128.4rem
         padding: $common-spacing * 2
 
+    &-title // TODO change after merge with de-vue branch
+      @extend .common-header
+      &:before
+        border-top-color: $color-white
+
+        @include bp('landscape')
+          margin-left: 0
+
+      color: $color-white
+      display: none
+      font-size: 2.6rem
+      line-height: 3rem
+      padding: $common-spacing
+
+      @include bp('portrait')
+        font-size: 4.2rem
+        line-height: 4.8rem
+
+      @include bp('landscape')
+        font-size: 5rem
+        line-height: 5.6rem
+        margin: 0 auto
+        max-width: 128.4rem
+        padding: $common-spacing * 2
+
+      @include bp('large')
+        font-size: 7.2rem
+        line-height: 8.2rem
+
+      .landing-page &
+        display: block
+
   &__image
     height: 100%
     opacity: 0
@@ -79,14 +111,22 @@
     height: 0
     padding-bottom: 38.88% // 18rem //56.25%
 
+    .page-id-779 &, .page-id-4 &
+      padding-bottom: 29rem
+
     @include bp('portrait')
       padding-bottom: 38.88%
+
+      .page-id-779 &, .page-id-4 &
+        padding-bottom: 38.88%
 
     .home &
       padding-bottom: 24.4rem //76.25%
 
       @include bp('portrait')
         padding-bottom: 43.33%
+
+
 
   &__img-container
     background-color: $color-dark
@@ -390,3 +430,6 @@
 
       &__hero
         display: none
+
+
+
