temporary changes to search page
these changes should be replicated to some extent after merging in the de-vue branch

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -204,6 +204,13 @@
     padding: $common-spacing
     text-align: left
 
+  &__jobs-available-title
+    .youth-custody &:before
+      content: 'youth custody prison officer'
+
+    .prison-officer &:before
+      content: 'prison officer'
+
   &__results
     $sr: &
     @include bp('portrait')
@@ -371,6 +378,17 @@
       &:hover:nth-last-child(2):after
         @include bp('portrait')
           cursor: s-resize
+
+  &__job-list-message
+    background-color: rgba($color-main, 0.1)
+    display: none
+    padding: $common-spacing
+    padding-bottom: $common-spacing * 2
+    text-align: left
+    text-decoration: underline
+
+    .youth-custody &
+      display: block
 
   &__map
     display: flex
