page title will now appear for pages with no header image
so now a page can have a header image and title,
or a title and no header image,
or no title and no header image (eg find a job pages)

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -412,14 +412,19 @@
   &--style-dark
     height: auto
     border: none
+    background-color: $color-transparency-dark-start
 
     .l-site-header
       position: relative
 
     .header
-      &__site-header
-        background-color: $color-dark
-        background: linear-gradient(60deg, $color-gradient-light, $color-gradient-dark)
 
-      &__hero
-        display: none
+      &__site-header
+        background: inherit
+
+      &__img-ratio
+        padding-bottom: 0
+        height: initial
+
+      &__overlay
+        position: initial
