--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -38,7 +38,7 @@
       &__nav-link:first-child > *
         border-left: none
 
-.search
+.find-a-job
   $s: &
   $border: .1rem solid $color-light
   $map-shadow: 0px 4px 16px 0px $color-medium-transparent
