--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -174,7 +174,7 @@ hr
 @import 'components/job-summary'
 @import 'components/nav-block'
 @import 'components/quote'
-@import 'components/search'
+@import 'components/find-a-job'
 @import 'components/text-block'
 @import 'components/video-player'
 
