--- a/web/app/themes/ppj/src/sass/components/footer.sass
+++ b/web/app/themes/ppj/src/sass/components/footer.sass
@@ -78,3 +78,31 @@
 
     & path
       fill: currentColor
+
+.page-template-find-a-job
+  @include bp('portrait')
+
+    .footer
+      font-size: 1.6rem
+      padding: $common-spacing
+
+      &__container
+        display: flex
+        justify-content: center
+
+      &__nav-links
+        display: flex
+
+      &__nav-link, &__copyright
+        margin: 0 0 0 $common-spacing
+
+      &__nav-link > *, &__copyright > *
+        border-left: 1px solid $color-light
+        display: block
+        height: 100%
+        line-height: 1
+        padding-left: $common-spacing
+        text-align: center
+
+      &__nav-link:first-child > *
+        border-left: none
