added colors to error-page.sass

--- a/web/app/themes/ppj/src/sass/error-page.sass
+++ b/web/app/themes/ppj/src/sass/error-page.sass
@@ -2,6 +2,10 @@
  * This stylesheet is intended for use on error pages
  */
 
+@import 'colors'
+$color-main: $color-1
+$color-tertiary: $color-2
+
 @import 'variables'
 @import 'breakpoints'
 
