--- a/web/app/themes/ppj/src/sass/landing-page.sass
+++ b/web/app/themes/ppj/src/sass/landing-page.sass
@@ -20,17 +20,17 @@ $color-tertiary: $color-2
   &__group
     margin-top: $common-spacing * 2
 
-    &--style-one
-      #{$lpg}__card-cta-link
-        background-color: $color-1
-
-    &--style-two
-      #{$lpg}__card-cta-link
-        background-color: $color-2
-
-    &--style-three
-      #{$lpg}__card-cta-link
-        background-color: $color-3
+    //&--style-one
+    //  #{$lpg}__card-cta-link
+    //    background-color: $color-1
+    //
+    //&--style-two
+    //  #{$lpg}__card-cta-link
+    //    background-color: $color-2
+    //
+    //&--style-three
+    //  #{$lpg}__card-cta-link
+    //    background-color: $color-3
 
     &--other
 
@@ -85,32 +85,37 @@ $color-tertiary: $color-2
       align-items: stretch
       flex-direction: row
       justify-content: center
+      flex-wrap: wrap
       padding: 0 8rem
 
-      &--number-of-cards-1 #{$lpg}__card
-        max-width: 24rem
-        width: 48%
+      #{$lpg}__card
+        width: calc(50% - #{$common-spacing * 2})
 
-      &--number-of-cards-2 #{$lpg}__card
-        width: 49%
-
-      &--number-of-cards-3 #{$lpg}__card
-        width: 32%
+      //&--number-of-cards-1 #{$lpg}__card
+      //  max-width: 24rem
+      //  width: 48%
+      //
+      //&--number-of-cards-2 #{$lpg}__card
+      //  width: 49%
+      //
+      //&--number-of-cards-3 #{$lpg}__card
+      //  width: 32%
 
     @include bp('landscape')
       padding: 0 11rem
 
-      &--number-of-cards-1 #{$lpg}__card
-        max-width: 32rem
-        width: 48%
-
-      &--number-of-cards-2 #{$lpg}__card
-        width: 49%
-
-      &--number-of-cards-3 #{$lpg}__card
-        width: 32%
+      //&--number-of-cards-1 #{$lpg}__card
+      //  max-width: 32rem
+      //  width: 48%
+      //
+      //&--number-of-cards-2 #{$lpg}__card
+      //  width: 49%
+      //
+      //&--number-of-cards-3 #{$lpg}__card
+      //  width: 32%
 
   &__card
+    $c: &
     display: flex
     flex-direction: column
     font-size: 1.6rem
@@ -133,7 +138,34 @@ $color-tertiary: $color-2
       margin-left: 0
 
     &:last-child
-      margin-right: 0
+      margin-right: auto
+
+    &-image-container
+      height: 0
+      margin: 0 0 $common-spacing
+      padding-bottom: percentage(9/16)
+      position: relative
+      width: 100%
+
+      #{$c}--color-one &
+        border-bottom: solid $common-spacing $color-1
+
+      #{$c}--color-two &
+        border-bottom: solid $common-spacing $color-2
+
+      #{$c}--color-three &
+        border-bottom: solid $common-spacing $color-3
+
+    &-image-ratio
+      position: absolute
+      bottom: 0
+      left: 0
+      right: 0
+      top: 0
+
+    &-image
+      height: 100%
+      width: 100%
 
   &__card-title
     font-size: 2.2rem
@@ -141,26 +173,12 @@ $color-tertiary: $color-2
     @include bp('large')
       font-size: 3.2rem
 
-  &__card-image-container
-    height: 0
-    margin: 0 0 $common-spacing
-    padding-bottom: percentage(9/16)
-    position: relative
-    width: 100%
-
-  &__card-image-ratio
-    position: absolute
-    bottom: 0
-    left: 0
-    right: 0
-    top: 0
-
-  &__card-image
-    height: 100%
-    width: 100%
-
   &__card-cta-link
     @extend .cta-link
+
+    background-color: $color-white
+    border: .2rem solid $color-dark
+    color: $color-dark
     font-size: 2rem
     margin-top: auto
     width: 100%
