added fourth color for landing page

--- a/web/app/themes/ppj/src/sass/colors.sass
+++ b/web/app/themes/ppj/src/sass/colors.sass
@@ -1,4 +1,4 @@
-$color-1: #0099cc
+$color-1: rgb(0,153,204)
 $color-2: rgb(113,11,105)
-$color-3: #00A685
+$color-3: rgb(0,166,133)
 $color-4: rgb(77,66,223)
