--- a/web/app/themes/ppj/src/sass/landing-page.sass
+++ b/web/app/themes/ppj/src/sass/landing-page.sass
@@ -156,6 +156,9 @@ $color-tertiary: $color-2
       #{$c}--color-three &
         border-bottom: solid $common-spacing $color-3
 
+      #{$c}--color-four &
+        border-bottom: solid $common-spacing $color-4
+
     &-image-ratio
       position: absolute
       bottom: 0
