--- a/web/app/themes/ppj/src/sass/landing-page.sass
+++ b/web/app/themes/ppj/src/sass/landing-page.sass
@@ -8,14 +8,16 @@ $color-tertiary: $color-2
 .landing-page-groups
   $lpg: &
   margin: 0 auto
+  max-width: 48rem
   padding: 0 $common-spacing
 
   @include bp('portrait')
     margin: 0 auto
-    padding: 0 8rem
+    max-width: initial
+    padding: 0 4.8rem
 
   @include bp('landscape')
-    padding: 0 11rem
+    padding: 0 7.8rem
 
   &__group
     margin-top: $common-spacing * 2
@@ -79,7 +81,7 @@ $color-tertiary: $color-2
     $cr: &
     display: flex
     flex-direction: column
-    align-items: center
+    align-items: stretch
 
     @include bp('portrait')
       align-items: stretch
@@ -116,11 +118,13 @@ $color-tertiary: $color-2
 
   &__card
     $c: &
+    border-top: solid $common-spacing $color-dark
     display: flex
     flex-direction: column
     font-size: 1.6rem
     line-height: 2.2rem
     margin: 0 0 $common-spacing * 2
+    padding-top: $common-spacing
 
     @include bp('portrait')
       margin-left: $common-spacing
@@ -134,11 +138,13 @@ $color-tertiary: $color-2
       font-size: 2.4rem
       line-height: 3.2rem
 
-    &:first-child
-      margin-left: 0
-
     &:last-child
-      margin-right: auto
+      @include bp('portrait')
+        margin-right: auto
+
+    &--has-image
+      border-top: none
+      padding-top: 0
 
     &-image-container
       height: 0
