--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -341,6 +341,9 @@
     width: 9.4rem
     pointer-events: auto
 
+    .youth-custody &
+      @include background-img('svg/ycs_logo.svg')
+
     @include bp('portrait')
       height: 6.4rem
       width: 15rem
