--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -109,14 +109,12 @@
 
   &__img-ratio
     height: 0
-    padding-bottom: 38.88% // 18rem //56.25%
+    padding-bottom: 24.4rem // for small screens the image should stop scaling vertically
 
     @include bp('portrait')
       padding-bottom: 38.88%
 
     .leg-home &
-      padding-bottom: 24.4rem //76.25%
-
       @include bp('portrait')
         padding-bottom: 43.33%
 
