using main color to highlight selected job in list on find-a-job

--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -56,6 +56,6 @@
     transition: $main-transition-duration
 
     &:before
-      background-color: $color-secondary
+      background-color: $color-main
       transition: all $main-transition-duration
 
